tests/error/dup_crd_val.tst
123
#rooms
r1 0 0
r2 1 1
r3 2 2
##start
s 4 4
##end
e 5 5
r4 5 5
#links
e-s
e-r1
e-r2
e-r3
r1-r2
r1-r3
r2-r3
